--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           <div class="px-4 align-items-center d-flex">
             <i class="bi bi-question-circle fs-3 px-1"></i>
             <label>
-              {{ "help" | translate }}
+              {{ "button.help" | translate }}
             </label>
           </div>
         </div>
@@ -45,7 +45,7 @@
             >
               <i class="bi bi-person-fill fs-3"></i>
               <label>
-                {{ "account" | translate }}
+                {{ "user.account" | translate }}
               </label>
             </div>
             <ul class="dropdown-menu dropdown-menu-end">
