--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@
   text-align: center;
 
   .header-bar {
-    height: 45px;
+    height: max-content;
     padding: 5px 0px 5px 0px;
     position: absolute;
     z-index: 1000;
